[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_input_focus",
    "bevy_log",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "std",
    "sysinfo_plugin",
    "wayland",
    "webgl2",
]

[package]
name = "atlaste"
version = "0.1.0"
edition = "2024"
description = "An interactive mapping tool for RPG Maker 2000 games."
repository = "https://github.com/AcrylonitrileButadieneStyrene/atlaste"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rpgmaker2000", "r2k"]
categories = ["graphics"]
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
strip = true

[dependencies]
anyhow = "*"
atlaste_lcf = { path = "./crates/atlaste_lcf" }
bevy = { workspace = true }
bevy_pancam = "0.19"
bevy_simple_text_input = "0.12"
encoding_rs = "0.8"
rfd = "0.15"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.log]
version = "*"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.strum]
version = "0.27.1"
features = ["derive"]
