cargo-features = ["panic-immediate-abort"]

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
encoding_rs = "0.8"
strum = { version = "0.27", features = ["derive"] }
url = "2.5.7"

[workspace.dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "experimental_bevy_feathers",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "std",
    "sysinfo_plugin",
    "x11",
    "webgl2",
]

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
type_complexity = "allow"

[package]
name = "atlaste"
version = "0.1.0"
edition = "2024"
description = "An interactive mapping tool for RPG Maker 2000 games."
repository = "https://github.com/AcrylonitrileButadieneStyrene/atlaste"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rpgmaker2000", "r2k"]
categories = ["graphics"]
publish = false

[profile.dev]
panic = "abort"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
strip = true

[dependencies]
atlaste_image = { path = "./crates/atlaste_image" }
atlaste_lcf = { path = "./crates/atlaste_lcf" }
atlaste_ui = { path = "./crates/atlaste_ui" }
bevy = { workspace = true }
bevy-persistent = { version = "0.9.0", features = ["toml"] }
bevy_pancam = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
encoding_rs = { workspace = true }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
modular-bitfield = "0.13.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
strum = { workspace = true }
